--- a/sizzleThaShit.css
+++ b/sizzleThaShit.css
@@ -56,9 +56,14 @@ ul, li{
 .mb-1{
   margin-bottom: 1em;
 }
+.ml-1{
+  margin-left: 1em;
+}
 .itemAdder{
   border: solid grey 1px;
   border-radius: 10px;
+  width: 420px;
+  background-color: gainsboro;
 }
 .img-envelope{
   width: 320px;
